<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/main_btnPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_main_btn_preview" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_main_lbl_prefix"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/main_btnPrefixClear"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_main_btn_prefix_clear" />

        <Button
            android:id="@+id/main_btnPrefixCurDT"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_main_btn_prefix_curdatetime" />

        <DigitalClock
            android:id="@+id/digitalClock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DigitalClock" />

    </LinearLayout>

    <EditText
        android:id="@+id/main_txtPrefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/main_btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_main_btn_start" />

        <Button
            android:id="@+id/main_btnEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:text="@string/ui_main_btn_end" />

    </LinearLayout>

    <ListView
        android:id="@+id/lsvSchedules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
</LinearLayout>